<resources>
    <string name="app_name">JustMyFinance</string>

    <!-- Dashboard -->
    <string name="balance_text">Balance</string>
    <string name="income_text">Income</string>
    <string name="expense_text">Expense</string>
    <string name="debt_text">Debt</string>
    <string name="lend_text">Lend</string>

    <!-- List -->
    <string name="entries_list_title_text">Activities</string>
</resources>